--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,13 +1,14 @@
 <h1>All Flights</h1>
 <% @flights.each do |flight| %>
-<section id= "flight-<%=flight.id %>">
 <ul>
-  <li>Flight Number: <%= flight.number %> Airline:<%=flight.airline.name  %></li>
-</ul>
-<% flight.passengers.each do |passenger| %>
-<ul>
-  <li>Passenger: <%= passenger.name  %> </li>
-</ul>
-<%end %>
-<%end %>
-</section>
+  <section id="flight-<%=flight.id %>"> Flight: <li> <%=flight.number %> Airline: <%=flight.airline.name %>  </li>
+    <%flight.passengers.each do |passenger| %>
+      <ul>
+        <section id="passenger-<%=passenger.id %>">
+          <li> <%=passenger.name %> <%=button_to "Remove Passenger", "/flights/#{flight.id}/#{passenger.id}", method: :delete  %> </li>
+        </section>
+      </ul>
+    <%end %>
+  </section>
+  </ul>
+<% end %>
