--- a/app/views/airlines/show.html.erb
+++ b/app/views/airlines/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%=@airline.name  %></h1>
-<% @passengers.each do |passenger| %>
+<% @airline.adult_passenger_list.each do |passenger| %>
 <ul>
-  <li> <%= passenger.name %></li>
+  <li> <%= passenger %></li>
 </ul>
 <% end %>
